force-app/main/default/objects/GitHub_Repository__x/GitHub_Repository__x.object-meta.xml
<CustomObject>
    <description>GitHub Repository</description>
    <externalDataSource>GitHub_Data_Source</externalDataSource>
    <externalName>GitHub Repository</externalName>
    <label>GitHub Repository</label>
    <pluralLabel>GitHub Repositories</pluralLabel>
</CustomObject>