force-app/main/default/objects/GitHub_Repository__x/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Archived</description>
    <externalDeveloperName>Archived</externalDeveloperName>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>