force-app/main/default/objects/GitHub_Repository__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>