force-app/main/default/objects/GitHub_Repository__x/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disabled</description>
    <externalDeveloperName>Disabled</externalDeveloperName>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>