force-app/main/default/objects/GitHub_Repository__x/fields/Languages_URL__c.field-meta.xml
<CustomField>
    <fullName>Languages_URL__c</fullName>
    <description>Languages_URL</description>
    <externalDeveloperName>Languages_URL</externalDeveloperName>
    <label>Languages URL</label>
    <type>Url</type>
</CustomField>