force-app/main/default/objects/GitHub_Repository__x/fields/LanguagesUrl__c.field-meta.xml
<CustomField>
    <fullName>LanguagesUrl__c</fullName>
    <description>Languages URL</description>
    <externalDeveloperName>LanguagesUrl</externalDeveloperName>
    <label>Languages URL</label>
    <type>Url</type>
</CustomField>