force-app/main/default/objects/GitHub_Repository__x/fields/Last_Pushed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pushed_Date__c</fullName>
    <description>Last Pushed Date</description>
    <externalDeveloperName>Last_Pushed_Date</externalDeveloperName>
    <label>Last Pushed Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>