force-app/main/default/objects/GitHub_Repository__x/fields/LastPushedDate__c.field-meta.xml
<CustomField>
    <fullName>LastPushedDate__c</fullName>
    <description>Last Pushed Date</description>
    <externalDeveloperName>LastPushedDate</externalDeveloperName>
    <label>Last Pushed Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>