force-app/main/default/objects/GitHub_Repository__x/fields/Open_Issues_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Issues_Count__c</fullName>
    <description>Open_Issues_Count</description>
    <externalDeveloperName>Open_Issues_Count</externalDeveloperName>
    <label>Open Issues Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>