force-app/main/default/objects/GitHub_Repository__x/fields/Owner_Login__c.field-meta.xml
<CustomField>
    <fullName>Owner_Login__c</fullName>
    <description>Owner Login</description>
    <externalDeveloperName>Owner_Login</externalDeveloperName>
    <label>Owner Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>