force-app/main/default/objects/GitHub_Repository__x/fields/Repository_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Repository_Created_Date__c</fullName>
    <description>Repository Created Date</description>
    <externalDeveloperName>Repository_Created_Date</externalDeveloperName>
    <label>Repository Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>