force-app/main/default/objects/GitHub_Repository__x/fields/Repository_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Repository_Updated_Date__c</fullName>
    <description>Repo Updated Date</description>
    <externalDeveloperName>Repository_Updated_Date</externalDeveloperName>
    <label>Repo Updated Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>