force-app/main/default/objects/GitHub_Repository__x/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size</description>
    <externalDeveloperName>Size</externalDeveloperName>
    <label>Size</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>