force-app/main/default/objects/GitHub_Repository__x/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <description>Stars</description>
    <externalDeveloperName>Stars</externalDeveloperName>
    <label>Stars</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>