force-app/main/default/objects/GitHub_Repository__x/fields/Total_Forks__c.field-meta.xml
<CustomField>
    <fullName>Total_Forks__c</fullName>
    <description>Total_Forks</description>
    <externalDeveloperName>Total_Forks</externalDeveloperName>
    <label>Total Forks</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>