force-app/main/default/objects/GitHub_Repository__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>DisplayUrl</columns>
    <columns>Description__c</columns>
    <columns>Language__c</columns>
    <columns>Private__c</columns>
    <columns>Stars__c</columns>
    <columns>Open_Issues_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>